# RapidRead-PDF2Podcast

./: README.md  pyproject.toml  requirements.txt
audio_outputs/podcast_script_20251009_004630/: playlist.m3u
backend/: config.py  main.py  models.py  routes.py
backend/agents/: crew_agents.py
backend/services/: crew_service.py  pdf_service.py  tts_service.py
backend/tasks/: crew_tasks.py
backend/tools/: text_cleaner.py
frontend/: streamlit_app.py
outputs/: podcast_script_20251008_163642.txt  podcast_script_20251008_164430.txt  podcast_script_20251008_164917.txt  podcast_script_20251009_001508.txt  podcast_script_20251009_004630.txt
